# anole

./: Cargo.toml  LICENSE  README.md
anole/: Cargo.toml
anole/src/: capture.rs  context.rs  engine.rs  error.rs  faker.rs  lib.rs  report.rs  store.rs  value.rs
anole/src/de/: xml.rs
anole/src/task/: chain.rs  http.rs  mod.rs
anole/src/task/db/: mod.rs  mysql.rs
anole/tests/: engin.rs  faker.rs  xml_de.rs
examples/: Cargo.toml  faker.rs  http.rs  mysql.rs
