[package]
name = "anole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
uuid = {version = "0.8", features = ["v4", "v5"]}
bytes = "1.1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
env_logger = "0.9.0"
url = "2.2.2"
quick-xml = "0.22.0"